export type Answer = {
  code: string;
  answer: string;
};
